hphp/hack/test/typecheck/ban_error_suppression/case1.php.exp
File "case1.php", line 6, characters 8-8:
The error suppression operator @ is not allowed (Parsing[1002])
